<resources>
    <string name="app_name">Treeio</string>
    <string name="phone_number">phone number</string>
    <string name="code">code</string>
    <string name="cont">continue</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="login">LOGIN</string>
    <string name="follow_us">Follow Us</string>
    <string name="profile">Profile</string>
    <string name="rate_it">Rate it!</string>
    <string name="delete">Delete</string>
    <string name="enter_discription">Enter Discription</string>
    <string name="enter_title">Enter Title</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="latitude_42_000000">Latitude: 42.000000</string>
    <string name="location" translatable="false">Islamabad, Pakistan</string>
    <string name="date_old">August 1st, 2021</string>
    <string name="save">Save</string>
    <string name="latitude">Latitude: 42.000000</string>
    <string name="longitude">Longitude: 53.000089</string>
    <string name="login_now">Login Now</string>
    <string name="please_login_to_continue_using_app">Please login to continue using App</string>
    <string name="introGetStarted">Trees provide a crucial line of defense against global warming. Trees are life-givers and lifesavers but they also need our help to grow and remain healthy.</string>
    <string name="welcome_to_treeio">Welcome to Treeio</string>
    <string name="get_started">GET STARTED</string>
    <string name="wait_for_the_code">Wait for the code or enter manually</string>
    <string name="otp">OTP</string>
    <string name="city_country">Islamabad, Pakistan</string>
    <string name="add_new_record">Add New Record</string>
    <string name="view_old_records">VIEW OLD Records</string>
    <string name="phoneNo">+923352132436</string>
    <string name="log_out">Log Out</string>
    <string name="title_drawer">Treeio</string>
    <string name="lbl_langSelectEnglis" translatable="false">en</string>
    <string name="notifications">Notifications</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="settings">Settings</string>
    <string name="AboutApp">About App</string>
    <string name="contact_us">Contact Us</string>
    <string name="tutorial">Tutorial</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App</string>
    <string name="edit">edit</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
</resources>