<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/follow_us"  android:id="@+id/btnNavFollowUs" android:icon="@drawable/ic_user"/>
    <item android:title="@string/profile"  android:id="@+id/btnNavProfile" android:icon="@drawable/ic_user"/>
    <item android:title="@string/notifications" android:icon="@drawable/ic_user"/>
    <item android:title="@string/rate_us"  android:id="@+id/btnNavRateUs" android:icon="@drawable/ic_user"/>
    <item android:title="@string/report_a_problem"  android:icon="@drawable/ic_user"/>
    <item android:title="@string/contact_us" android:icon="@drawable/ic_user"/>
    <item android:title="@string/help" android:icon="@drawable/ic_user"/>
    <item android:title="@string/terms_of_service" android:icon="@drawable/ic_user"/>
    <item android:title="@string/settings" android:icon="@drawable/ic_user"/>
    <item android:title="@string/tutorial" android:icon="@drawable/ic_user"/>
    <item android:title="@string/privacy_policy" android:icon="@drawable/ic_user"/>
    <item android:title="@string/share_app" android:icon="@drawable/ic_user"/>
</menu>