<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewbottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_now"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="8dp"
            android:text="@string/please_login_to_continue_using_app"
            android:textColor="@color/colorPrimaryText" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinnerCountries"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                />

            <EditText
                android:id="@+id/et_phone_no_L"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/ic_telephone"
                android:drawablePadding="10dp"
                android:hint="+92_ _ _ _ _ _ _ _ _ _"
                android:inputType="number"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />
        </LinearLayout>


        <Button
            android:id="@+id/btnCountineL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primaryDarkColor"
            android:text="@string/cont"
            android:textColor="@android:color/white" />

        <ProgressBar
            android:id="@+id/progressBarLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_phone_no_L"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:visibility="gone"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewbottom"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_wave"
        />

</androidx.constraintlayout.widget.ConstraintLayout>