<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:id="@+id/mainDrawer"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintVertical_bias="0.5">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="532dp"
                app:cardBackgroundColor="@color/primaryDarkColor"
                app:cardCornerRadius="80dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.636"
                app:layout_constraintStart_toEndOf="@+id/cardView2">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/textViewtemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="25°C"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.038" />

                    <TextView
                        android:id="@+id/textViewWheatherDes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="clear sky"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.432"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageViewWheatherIcon"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageView
                        android:id="@+id/imageViewWheatherIcon"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.45"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.413"
                        app:srcCompat="@drawable/ic_stromy_w" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnAddNewRecord"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="92dp"
                android:backgroundTint="@color/primaryDarkColor"
                android:drawableLeft="@drawable/ic_add"
                android:text="@string/add_new_record"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <Button
                android:id="@+id/btnHistory"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginBottom="292dp"
                android:backgroundTint="@color/primaryDarkColor"
                android:drawableLeft="@drawable/ic_press"
                android:text="@string/view_old_records"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAddNewRecord"
                app:layout_constraintVertical_bias="0.23" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="110dp"
                app:cardBackgroundColor="@color/primaryDarkColor"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toStartOf="@+id/cardView"
                app:layout_constraintHorizontal_bias="0.307"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="32dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_location_on" />

                    <EditText
                        android:id="@+id/et_city_country"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical"
                        android:inputType="textPersonName"
                        android:text="@string/city_country"
                        android:textColor="@color/white"
                        android:textSize="16sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.gms.ads.AdView
                android:id="@+id/AdsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-3940256099942544/6300978111"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">
                >
                <!--

        <ImageView
            android:id="@+id/imageViewbottomMain"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_wave"
            />
                -->

            </com.google.android.gms.ads.AdView>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar

                android:id="@+id/appBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:backgroundTint="@color/primaryDarkColor"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_menu_24"
                app:title="@string/app_name" />

        </com.google.android.material.appbar.AppBarLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:backgroundTint="@color/colorPrimaryText"
        app:itemTextColor="@android:color/white"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/draw_header" >


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>